--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,5 +98,6 @@
         "typeindex": "cpp",
         "valarray": "cpp",
         "variant": "cpp"
-    }
+    },
+    "C_Cpp.default.compilerPath": ""
 }
